# asset_management

./: README.md  pyproject.toml  setup.py
netbox_asset_management/: __init__.py  filtersets.py  forms.py  graphql.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_asset_management/api/: serializers.py  urls.py  views.py
netbox_asset_management/migrations/: 0001_initial.py
netbox_asset_management/templates/netbox_asset_management/: base_asset_tab.html
